# circa

./: .gitignore  API_GUIDE.md  ARCHITECTURE.md  ASTRONAUTS.md  DIABETES.md  GOOGLE_CALENDAR_SETUP.md  README.md  SETUP_GUIDE.md  docker-compose.yml  pyproject.toml  setup_env.sh
.github/workflows/: tests.yml
backend/: Dockerfile  alembic.ini  requirements.txt
backend/alembic/: env.py
backend/app/: celery_worker.py  main.py
backend/app/api/v1/: router.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  event.py  health_data.py  integration.py  preference.py  quiz_response.py  task.py  user.py
backend/app/schemas/: event.py  task.py  user.py
backend/app/services/ai/: email_parser.py  scheduler.py
backend/app/services/integrations/: canvas_lms.py  gmail.py  google_calendar.py  (+2 more)
circadian/: __init__.py  benchmark.py  cli.py  model.py  scheduler.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AIScheduler.tsx  CanvasManualImport.tsx  Layout.tsx
frontend/src/pages/: Calendar.tsx  Dashboard.tsx  Integrations.tsx  Login.tsx  Onboarding.tsx  Register.tsx  Settings.tsx  Tasks.tsx
frontend/src/services/: api.ts
frontend/src/store/: authStore.ts
missions/: __init__.py  astronaut.py  benchmark_astronaut.py  benchmark_rhythmrx.py  real_analysis.py  rhythmrx.py  shanghai_data.py
scripts/: analyze_shanghai.py
tests/: test_astronaut.py  test_model.py  test_real_analysis.py  test_rhythmrx.py  test_scheduler.py
(+9 files in other folders)
